Kubernetes/files/config/monitoring/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
      kubernetes.io/ingress.class: nginx
  name: prometheus-ingress
  namespace: prometheus
spec:
  rules:
  - host: monitoring.server.com
    http:
      paths:
      - path: /prometheus
        backend:
          serviceName: prometheus-server
          servicePort: 80
